# supplier-mock-factory

./: .gitignore  AGENTS.md  CLAUDE_SETUP.md  README.md  docker-compose.yml  prompt.txt  reference-sids.json.example  settings.json.example
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/core/: apikey_provisioner.py  booking_id_injector.py  chc_paths.py  contract_provisioner.py  crawla_mutations.py  exp_paths.py  expectation_utils.py  hbs_paths.py  linkage_validator.py  mock_registration.py  mock_urls.py  namespace.py  orchestrator.py  path_utils.py  quickwit_indices.py  sb_group_provisioner.py  scenario_engine.py  supplier_registry.py
backend/app/db/: database.py  models.py
backend/app/ingest/: expectation_builder.py  field_map_generator.py  template_ingestor.py
backend/app/integrations/: backoffice.py  business_rules.py  config_manager.py  core_app.py  (+5 more)
backend/tests/: conftest.py  test_apikey_provisioner.py  test_backoffice.py  test_booking_id_injector.py  test_business_rules.py  test_chc.py  test_chc_paths.py  test_contract_provisioner.py  test_core_app.py  test_crawla_mutations.py  test_exp_paths.py  test_exp_search_prices.py  test_expectation_builder.py  test_expectation_utils.py  test_hbs_paths.py  test_health.py  test_hotel_mapping.py  test_mock_server.py  test_mock_urls.py  test_orchestrator.py  test_path_utils.py  test_plugins.py  test_plugins_p2.py  test_quickwit.py  test_scenario_engine.py  test_scenario_service_teardown.py  test_scenarios_api.py  test_template_ingestor.py
(+93 files in other folders)
